// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestedComponent is Coin and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Coin-lmzeq1-0",
        "isStatic": true,
        "rules": Array [
          "width:21px;height:12px;background:",
          "gold",
          ";box-shadow:0 -6px 0 -2px ",
          "gold",
          ",0 6px 0 -2px ",
          "gold",
          ",0 -12px 0 -4px ",
          "gold",
          ",0 12px 0 -4px ",
          "gold",
          ",0 -18px 0 -8px ",
          "gold",
          ",0 18px 0 -8px ",
          "gold",
          ",0 -24px 0 -12px ",
          "gold",
          ",0 24px 0 -12px ",
          "gold",
          ",-2px 0 0 0 ",
          "black",
          ",2px 0 0 0 ",
          "black",
          ",0 -4px 0 0 ",
          "black",
          ",0 4px 0 0 ",
          "black",
          ",0 -10px 0 -2px ",
          "black",
          ",0 10px 0 -2px ",
          "black",
          ",0 -14px 0 -4px ",
          "black",
          ",0 14px 0 -4px ",
          "black",
          ",0 -20px 0 -8px ",
          "black",
          ",0 20px 0 -8px ",
          "black",
          ",0 -26px 0 -12px ",
          "black",
          ",0 26px 0 -12px ",
          "black",
          ",-4px 0 0 0 ",
          "goldenrod",
          ",4px 0 0 0 ",
          "goldenrod",
          ",0 -2px 0 2px ",
          "goldenrod",
          ",0 2px 0 2px ",
          "goldenrod",
          ",0 -8px 0 0px ",
          "goldenrod",
          ",0 8px 0 0px ",
          "goldenrod",
          ",0 -12px 0 -2px ",
          "goldenrod",
          ",0 12px 0 -2px ",
          "goldenrod",
          ",0 -16px 0 -4px ",
          "goldenrod",
          ",0 16px 0 -4px ",
          "goldenrod",
          ",0 -22px 0 -8px ",
          "goldenrod",
          ",0 22px 0 -8px ",
          "goldenrod",
          ",0 -28px 0 -12px ",
          "goldenrod",
          ",0 28px 0 -12px ",
          "goldenrod",
          ",-6px 0 0 0 ",
          "black",
          ",6px 0 0 0 ",
          "black",
          ",0 0 0 4px ",
          "black",
          ",0 -6px 0 2px ",
          "black",
          ",0 6px 0 2px ",
          "black",
          ",0 -10px 0 0 ",
          "black",
          ",0 10px 0 0 ",
          "black",
          ",0 -14px 0 -2px ",
          "black",
          ",0 14px 0 -2px ",
          "black",
          ",0 -18px 0 -4px ",
          "black",
          ",0 18px 0 -4px ",
          "black",
          ",0 -24px 0 -8px ",
          "black",
          ",0 24px 0 -8px ",
          "black",
          ",0 -30px 0 -12px ",
          "black",
          ",0 30px 0 -12px ",
          "black",
          ";",
        ],
      },
      "displayName": "Coin",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Coin-lmzeq1-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is CoinEarned and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "CoinEarned-av3i5n-0",
        "isStatic": true,
        "rules": Array [
          "width:21px;height:12px;background:",
          "gold",
          ";box-shadow:0 -6px 0 -2px ",
          "gold",
          ",0 6px 0 -2px ",
          "gold",
          ",0 -12px 0 -4px ",
          "gold",
          ",0 12px 0 -4px ",
          "gold",
          ",0 -18px 0 -8px ",
          "gold",
          ",0 18px 0 -8px ",
          "gold",
          ",0 -24px 0 -12px ",
          "gold",
          ",0 24px 0 -12px ",
          "gold",
          ",-2px 0 0 0 ",
          "black",
          ",2px 0 0 0 ",
          "black",
          ",0 -4px 0 0 ",
          "black",
          ",0 4px 0 0 ",
          "black",
          ",0 -10px 0 -2px ",
          "black",
          ",0 10px 0 -2px ",
          "black",
          ",0 -14px 0 -4px ",
          "black",
          ",0 14px 0 -4px ",
          "black",
          ",0 -20px 0 -8px ",
          "black",
          ",0 20px 0 -8px ",
          "black",
          ",0 -26px 0 -12px ",
          "black",
          ",0 26px 0 -12px ",
          "black",
          ",-4px 0 0 0 ",
          "goldenrod",
          ",4px 0 0 0 ",
          "goldenrod",
          ",0 -2px 0 2px ",
          "goldenrod",
          ",0 2px 0 2px ",
          "goldenrod",
          ",0 -8px 0 0px ",
          "goldenrod",
          ",0 8px 0 0px ",
          "goldenrod",
          ",0 -12px 0 -2px ",
          "goldenrod",
          ",0 12px 0 -2px ",
          "goldenrod",
          ",0 -16px 0 -4px ",
          "goldenrod",
          ",0 16px 0 -4px ",
          "goldenrod",
          ",0 -22px 0 -8px ",
          "goldenrod",
          ",0 22px 0 -8px ",
          "goldenrod",
          ",0 -28px 0 -12px ",
          "goldenrod",
          ",0 28px 0 -12px ",
          "goldenrod",
          ",-6px 0 0 0 ",
          "black",
          ",6px 0 0 0 ",
          "black",
          ",0 0 0 4px ",
          "black",
          ",0 -6px 0 2px ",
          "black",
          ",0 6px 0 2px ",
          "black",
          ",0 -10px 0 0 ",
          "black",
          ",0 10px 0 0 ",
          "black",
          ",0 -14px 0 -2px ",
          "black",
          ",0 14px 0 -2px ",
          "black",
          ",0 -18px 0 -4px ",
          "black",
          ",0 18px 0 -4px ",
          "black",
          ",0 -24px 0 -8px ",
          "black",
          ",0 24px 0 -8px ",
          "black",
          ",0 -30px 0 -12px ",
          "black",
          ",0 30px 0 -12px ",
          "black",
          ";",
          "animation:",
          Keyframes {
            "id": "sc-keyframes-isQrCp",
            "inject": [Function],
            "name": "isQrCp",
            "rules": Array [
              "@-webkit-keyframes isQrCp{0%{opacity:0;-webkit-transform:rotateY(0) translateY(100%);-ms-transform:rotateY(0) translateY(100%);transform:rotateY(0) translateY(100%);}100%{opacity:1;-webkit-transform:rotateY(1800deg) translateY(0);-ms-transform:rotateY(1800deg) translateY(0);transform:rotateY(1800deg) translateY(0);}}",
              "@keyframes isQrCp{0%{opacity:0;-webkit-transform:rotateY(0) translateY(100%);-ms-transform:rotateY(0) translateY(100%);transform:rotateY(0) translateY(100%);}100%{opacity:1;-webkit-transform:rotateY(1800deg) translateY(0);-ms-transform:rotateY(1800deg) translateY(0);transform:rotateY(1800deg) translateY(0);}}",
            ],
            "toString": [Function],
          },
          " 1.4s ease-out forwards,",
          Keyframes {
            "id": "sc-keyframes-biVnR",
            "inject": [Function],
            "name": "biVnR",
            "rules": Array [
              "@-webkit-keyframes biVnR{70%{opacity:1;}100%{opacity:0;}}",
              "@keyframes biVnR{70%{opacity:1;}100%{opacity:0;}}",
            ],
            "toString": [Function],
          },
          " 2s ease-out forwards;",
        ],
      },
      "displayName": "CoinEarned",
      "foldedComponentIds": Array [
        "Coin-lmzeq1-0",
      ],
      "render": [Function],
      "styledComponentId": "CoinEarned-av3i5n-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is DropdownItem and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "DropdownItem-pa8zp2-0",
        "isStatic": true,
        "rules": Array [
          "align-items:center;display:flex;height:",
          "1.5em",
          ";justify-content:center;margin:0;overflow:hidden;padding:0;text-align:center;text-decoration:none;text-overflow:ellipsis;text-transform:capitalize;white-space:nowrap;width:100%;",
        ],
      },
      "displayName": "DropdownItem",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "DropdownItem-pa8zp2-0",
      "target": "li",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is DropdownList and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "DropdownList-cryzk1-0",
        "isStatic": true,
        "rules": Array [
          "background-color:white;border:solid 2px;border-top:0;box-shadow:4px 0 ",
          "#212529",
          ",0 -4px ",
          "#212529",
          ",-4px 0 ",
          "#212529",
          ",0 4px ",
          "#212529",
          ";list-style:none;margin:0 4px;max-height:calc(6 * ",
          "1.5em",
          ");overflow-y:hidden;padding:0;position:absolute;top:0;width:calc(100% - 12px);",
        ],
      },
      "displayName": "DropdownList",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "DropdownList-cryzk1-0",
      "target": "ul",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is DropdownWrap and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "DropdownWrap-sc-7fme7b-0",
        "isStatic": true,
        "rules": Array [
          "position:relative;width:100%;z-index:1;",
        ],
      },
      "displayName": "DropdownWrap",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "DropdownWrap-sc-7fme7b-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is ErrorBox and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "ErrorBox-xbxs9c-0",
        "isStatic": true,
        "rules": Array [
          "background-color:",
          "rgba(231, 110, 85, 0.5)",
          ";box-shadow:4px 0 ",
          "#e76e55",
          ",0 -4px ",
          "#e76e55",
          ",-4px 0 ",
          "#e76e55",
          ",0 4px ",
          "#e76e55",
          ";display:block;margin:0.5em 0;overflow-x:auto;padding:0.5em;white-space:pre-wrap;",
        ],
      },
      "displayName": "ErrorBox",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "ErrorBox-xbxs9c-0",
      "target": "pre",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is ErrorCode and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "ErrorCode-sc-1u9g8cu-0",
        "isStatic": true,
        "rules": Array [
          "color:",
          "#ce372b",
          ";font-family:",
          "'Press Start 2P', monospace",
          ";font-size:0.65em;font-weight:bold;",
        ],
      },
      "displayName": "ErrorCode",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "ErrorCode-sc-1u9g8cu-0",
      "target": "code",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is FormLineWrap and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "FormLineWrap-sc-118xyvq-0",
        "isStatic": true,
        "rules": Array [
          "display:flex;width:100%;",
        ],
      },
      "displayName": "FormLineWrap",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "FormLineWrap-sc-118xyvq-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is Input and matches snapshot 1`] = `
.c0 {
  border: none;
  box-shadow: 0 4px #e76e55,0 -4px #e76e55,4px 0 #e76e55,-4px 0 #e76e55;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: #ce372b;
  padding: 0.5rem 1rem;
  text-transform: capitalize;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1.5em;
    line-height: 1.5em;
  }
}

<Input
  status="error"
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Input-sc-1wcekai-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "border:none;box-shadow:0 4px ",
            [Function],
            ",0 -4px ",
            [Function],
            ",4px 0 ",
            [Function],
            ",-4px 0 ",
            [Function],
            ";font-family:",
            "'Press Start 2P', monospace",
            ";line-height:calc(2 * ",
            "1.5em",
            ");margin:4px;outline-color:",
            [Function],
            ";padding:0.5rem 1rem;text-transform:capitalize;width:100%;@media (min-width:",
            "768px",
            "){font-size:",
            "1.5em",
            ";line-height:",
            "1.5em",
            ";}",
          ],
        },
        "displayName": "Input",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Input-sc-1wcekai-0",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    status="error"
  >
    <input
      className="c0"
    />
  </StyledComponent>
</Input>
`;

exports[`TestedComponent is Input and matches snapshot 2`] = `
.c0 {
  border: none;
  box-shadow: 0 4px #92cc41,0 -4px #92cc41,4px 0 #92cc41,-4px 0 #92cc41;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: #76c442;
  padding: 0.5rem 1rem;
  text-transform: capitalize;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1.5em;
    line-height: 1.5em;
  }
}

<Input
  status="success"
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Input-sc-1wcekai-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "border:none;box-shadow:0 4px ",
            [Function],
            ",0 -4px ",
            [Function],
            ",4px 0 ",
            [Function],
            ",-4px 0 ",
            [Function],
            ";font-family:",
            "'Press Start 2P', monospace",
            ";line-height:calc(2 * ",
            "1.5em",
            ");margin:4px;outline-color:",
            [Function],
            ";padding:0.5rem 1rem;text-transform:capitalize;width:100%;@media (min-width:",
            "768px",
            "){font-size:",
            "1.5em",
            ";line-height:",
            "1.5em",
            ";}",
          ],
        },
        "displayName": "Input",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Input-sc-1wcekai-0",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    status="success"
  >
    <input
      className="c0"
    />
  </StyledComponent>
</Input>
`;

exports[`TestedComponent is Input and matches snapshot 3`] = `
.c0 {
  border: none;
  box-shadow: 0 4px #212529,0 -4px #212529,4px 0 #212529,-4px 0 #212529;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: "#e7e7e7";
  padding: 0.5rem 1rem;
  text-transform: capitalize;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1.5em;
    line-height: 1.5em;
  }
}

<Input
  status={null}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Input-sc-1wcekai-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "border:none;box-shadow:0 4px ",
            [Function],
            ",0 -4px ",
            [Function],
            ",4px 0 ",
            [Function],
            ",-4px 0 ",
            [Function],
            ";font-family:",
            "'Press Start 2P', monospace",
            ";line-height:calc(2 * ",
            "1.5em",
            ");margin:4px;outline-color:",
            [Function],
            ";padding:0.5rem 1rem;text-transform:capitalize;width:100%;@media (min-width:",
            "768px",
            "){font-size:",
            "1.5em",
            ";line-height:",
            "1.5em",
            ";}",
          ],
        },
        "displayName": "Input",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Input-sc-1wcekai-0",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    status={null}
  >
    <input
      className="c0"
    />
  </StyledComponent>
</Input>
`;

exports[`TestedComponent is MessageBox and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "MessageBox-sc-1jj71pj-0",
        "isStatic": true,
        "rules": Array [
          "background-color:papayawhip;padding:1em;",
        ],
      },
      "displayName": "MessageBox",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "MessageBox-sc-1jj71pj-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is Modal and matches snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.4);
  display: none;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

<Modal
  open={false}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Modal-sc-1lxhdwr-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "align-items:center;background-color:rgba(0,0,0,0.4);display:",
            [Function],
            ";height:100%;justify-content:center;left:0;overflow:auto;position:fixed;top:0;width:100%;z-index:1;",
          ],
        },
        "displayName": "Modal",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Modal-sc-1lxhdwr-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    open={false}
  >
    <div
      className="c0"
      open={false}
    />
  </StyledComponent>
</Modal>
`;

exports[`TestedComponent is Modal and matches snapshot 2`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.4);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

<Modal
  open={true}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Modal-sc-1lxhdwr-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "align-items:center;background-color:rgba(0,0,0,0.4);display:",
            [Function],
            ";height:100%;justify-content:center;left:0;overflow:auto;position:fixed;top:0;width:100%;z-index:1;",
          ],
        },
        "displayName": "Modal",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Modal-sc-1lxhdwr-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    open={true}
  >
    <div
      className="c0"
      open={true}
    />
  </StyledComponent>
</Modal>
`;

exports[`TestedComponent is PageWrapper and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "PageWrapper-sc-1xhm07a-0",
        "isStatic": true,
        "rules": Array [
          "margin:auto;width:96vw;@media (min-width:",
          "768px",
          "){width:80vw;}",
        ],
      },
      "displayName": "PageWrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "PageWrapper-sc-1xhm07a-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is ThreeBlinking and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "ThreeBlinking-sc-1k540pu-0",
        "isStatic": true,
        "rules": Array [
          "animation:",
          Keyframes {
            "id": "sc-keyframes-yGVCZ",
            "inject": [Function],
            "name": "yGVCZ",
            "rules": Array [
              "@-webkit-keyframes yGVCZ{0%{opacity:.2;}20%{opacity:1;}100%{opacity:.2;}}",
              "@keyframes yGVCZ{0%{opacity:.2;}20%{opacity:1;}100%{opacity:.2;}}",
            ],
            "toString": [Function],
          },
          " 1.4s linear infinite both;display:inline-block;::before{content:'.';}:nth-child(2){animation-delay:0.2s;}:nth-child(3){animation-delay:0.4s;}",
        ],
      },
      "displayName": "ThreeBlinking",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "ThreeBlinking-sc-1k540pu-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;
